syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "./;proto";

service Order {
    //购物车
    rpc CartItemList(UserInfo) returns (CartItemListResponse); //获取用户的所有购物车信息
    rpc CreateCartItem(CartItemRequest) returns(ShopCartInfoResponse); //添加商品到购物车
    rpc UpdateCartItem(CartItemRequest) returns(google.protobuf.Empty); // 修改购物车条目信息
    rpc DeleteCartItem(CartItemRequest) returns(google.protobuf.Empty); //删除购物车条目

    //订单
    rpc CreateOrder(OrderRequest) returns (OrderInfoResponse); //新建订单
    rpc OrderList(OrderFilterRequest) returns (OrderListResponse); //订单列表
    rpc OrderDetail(OrderRequest) returns (OrderInfoDetailResponse); //订单的详情
    rpc UpdateOrderStatus(OrderStatus) returns(google.protobuf.Empty); //修改订单的支付状态
}

message UserInfo {
    int32 id = 1;
}

message ShopCartInfoResponse {
    int32 id = 1;
    int32 user_id = 2;
    int32 goods_id = 3;
    int32 nums = 4;
    bool checked = 5;
}

message CartItemListResponse {
    int32 total = 1;
    repeated ShopCartInfoResponse data = 2;
}

message CartItemRequest {
    int32 user_id = 2;
    int32 goods_id = 3;
    int32 nums = 4;
    bool checked = 5;
}

message OrderRequest {
    int32 id = 1;
    int32 user_id = 2;
    string address = 3;
    string mobile = 4;
    string name = 5;
    string note = 6;
    string order_sn = 7;
}

message OrderInfoResponse {
    int32 id = 1;
    int32 user_id = 2;
    string order_sn = 3;
    string status = 5;
    string note = 6;
    float total = 7;
    string address = 8;
    string name = 9;
    string mobile = 10;
    string add_time = 11;
}

message OrderListResponse {
    int32 total = 1;
    repeated OrderInfoResponse data = 2;
}

message OrderFilterRequest {
    int32 user_id = 1;
    int32 pages = 2;
    int32 page_per_nums = 3;
}

message OrderItemResponse {
    int32 id = 1;
    int32 order_id = 2;
    int32 goods_id = 3;
    string goods_name = 4;
    string goods_image = 5;
    float goods_price = 6;
    int32 nums = 7;
}

message OrderInfoDetailResponse {
    OrderInfoResponse order_info = 1;
    repeated OrderItemResponse data = 2;
}

message OrderStatus {
    string order_sn = 1;
    string status = 2;
}